@@ -6,6 +6,9 @@
 # bool: only warn about files passed on the command line
 only = 0
 
+# int: the maximum number of warnings to be displayed
+limit = 10
+
 # bool: warnings for Doc Strings
 noDocModule = 0
 noDocClass = 0
